[package]
name = "hello_bevy0_15"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { version = "0.2.1", features = ["enhanced-determinism"] }
bevy = {version = "0.15.0", features = ["dynamic_linking", "file_watcher"]}
bevy_ecs_ldtk = "0.11.0"
bevy_lit = "0.6.0"
leafwing-input-manager = "0.16.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
